--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.3",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "7.32.0",
