--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.173",
     "@types/react": "17.0.21",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
